<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Euro2012</string>
    <string name="schedule">Schedule</string>
    <string name="news">News</string>
    <string name="teams">Teams</string>
    <string name="setting">Setting</string>
    <string name="matchdetail">Match Detail</string>
    <string name="stadium">Stadium</string>
    <string name="arbitration">Refree</string>
    <string name="teamdetail">Team Detail</string>
    <string name="description">Description</string>
    <string name="testdes">The England national football team represents England in association football and is controlled by the Football Association, the governing body forThe England national football team represents England in association football and is controlled by the Football Association, the governing body forThe England national football team represents England in association football and is controlled by the Football Association, the governing body for</string>
    <string name="playerlist">Players List</string>
    <string name="tno">T.No</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="groupa">GROUP A</string>
    <string name="groupb">GROUP B</string>
    <string name="groupc">GROUP C</string>
    <string name="groupd">GROUP D</string>
    <string name="quarter">QUARTER-FINALS</string>
    <string name="semi">SEMI-FINALS</string>
    <string name="finals">FINAL</string>
    <string name="team">Team</string>
    <string name="pld">PLD</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="pts">PTS</string>
    <string name="details">&gt;</string>
    <string name="pleasewait">Please wait</string>
    <string name="nonetwork">No internet connection.</string>
    <string name="estimate">Estimated year</string>
    <string name="fifajoin">Fifa join year</string>
    <string name="fifarank">Fifa rank</string>
    <string name="coach">Coach</string>
    <string name="attend">Attend Euro times</string>
    <string name="player">Player</string>
    <string name="settingreply">Setting notification</string>
    <string name="warnewsmsg">Notification when a new message</string>
    <string name="vibrate">Vibrate when a goal</string>
    <string name="settinglanguage">Setting Language</string>
    <string name="english">English</string>
    <string name="korean">한국의</string>
    <string name="vietnam">Tiếng Việt</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="aboutus">About us</string>
    
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
	<string name="intro_title">Europe 2012</string>
	<string name="intro_address">19 floors, LandMark72 Tower, Plot E6, Pham Hung Road, Cau Giay dst, Ha Noi, Viet Nam</string>
	<string name="intro_text_tel">Call:</string>
	<string name="intro_tel">0435567810</string>
	<string name="intro_tel_text">(+84)-43-556-7810</string>
	<string name="intro_email">androidkraze@gmail.com</string>
	<string name="intro_website">http://nhncorp.com</string>
	<string name="intro_copyright">© Developed by NHN Inc - 2012</string>
	<string name="choose">Choose</string>
    <string name="betAsia">Asian handicap</string>
	<string name="betEuro">1x2</string>
	<string name="betOver">Over/Under</string>
    <string name="notstart">Not start yet, or no data.</string>
    <string name="needvideoplayer">You need a video player installed to view.</string>
	<string name="back">Back</string>
	<string name="start">Start match</string>
    <string name="end">Full time</string>
    <string name="nonetworktoupdate">No network to update data.</string>
</resources>