<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgtop"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnback" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-64dip"
            android:gravity="center_horizontal"
            android:text="@string/teamdetail"
            android:textColor="#fff"
            android:textSize="28dip" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
        android:padding="10dip">
    	<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" 
	        android:background="@drawable/bgwhitetop">
		<TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="England"
	            android:textSize="22dip"
	            android:textColor="#333"
	            android:gravity="center_vertical|center_horizontal"/>			        
		</LinearLayout>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" 
	        android:background="#fff">
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/description"
	            android:textColor="#333"
	            android:paddingLeft="10dip"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/testdes"
	            android:textColor="#333"
	            android:padding="10dip"
	            android:textSize="12dip"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/playerlist"
	            android:textColor="#333"
	            android:padding="10dip"/>
	    	<LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="1px"
		        android:background="#9eb399"/>
	    	<LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="37dip"
		        android:background="#e9efe9"
		        android:orientation="horizontal">
	    	    <TextView android:layout_width="0dip"
	    	        android:layout_height="fill_parent"
	    	        android:text="@string/tno"
	    	        android:textColor="#333"
	    	        android:layout_weight="1"
	    	        android:gravity="center_vertical|center_horizontal"/>
	    	    <LinearLayout
			        android:layout_width="1px"
			        android:layout_height="fill_parent"
			        android:background="#9eb399"/>
	    	    <TextView android:layout_width="0dip"
	    	        android:layout_height="fill_parent"
	    	        android:text="@string/name"
	    	        android:textColor="#333"
	    	        android:layout_weight="2"
	    	        android:gravity="center_vertical|center_horizontal"/>
	    	    <LinearLayout
			        android:layout_width="1px"
			        android:layout_height="fill_parent"
			        android:background="#9eb399"/>
	    	    <TextView android:layout_width="0dip"
	    	        android:layout_height="fill_parent"
	    	        android:text="@string/position"
	    	        android:textColor="#333"
	    	        android:layout_weight="2"
	    	        android:gravity="center_vertical|center_horizontal"/>
	    	</LinearLayout>
	    	<LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="1px"
		        android:background="#9eb399"/>
			        
		</LinearLayout>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" 
	        android:background="@drawable/bgwhitebottom">
			        
		</LinearLayout>      
	</LinearLayout>
</LinearLayout>